# ITMO-OCS-2024

./: README.md
src/bitmap_generator/: Makefile
src/bitmap_generator/include/: bitmap_generator.h
src/bitmap_generator/src/: bitmap_generator.cpp  main.cpp
src/neural_network/: Makefile
src/neural_network/include/: bitmap.hpp  netz.hpp  netz_formulas.hpp
src/neural_network/src/: bitmap.cpp  main.cpp  netz_formulas.cpp  netz_netzwerk.cpp  netz_neuron.cpp
src/neural_processor/: CMakeLists.txt  Makefile
src/neural_processor/include/: netzp_bus.hpp  netzp_cdu.hpp  netzp_comp_core.hpp  netzp_config.hpp  netzp_io.hpp  netzp_mem.hpp  netzp_utils.hpp
src/neural_processor/src/: netzp_cdu.cpp  netzp_comp_core.cpp  netzp_io.cpp  netzp_mem.cpp  netzp_tb.cpp  netzp_utils.cpp
